--- a/template/index.html
+++ b/template/index.html
@@ -33,6 +33,7 @@
 					<th>위치</th>
 					<th>Ping</th>
 					<th>HTTP</th>
+					<th>Organization</th>
 					<th>Domain</th>
 				</tr>
 			</thead>
@@ -49,6 +50,7 @@
 					<td>{{ .GeoIP }}</td>
 					<td>{{ .Ping.RttAvg }} ms</td>
 					<td>{{ .HTTP.BpsAvg }}</td>
+					<td>{{ .Organization }}</td>
 					<td>{{ .Domain }}</td>
 				</tr>
 				{{end}}
