테스트 결과에 시간 표시 및 속도 측정이 되지 않는 문제 수정

--- a/zone.tmpl
+++ b/zone.tmpl
@@ -12,6 +12,6 @@ $TTL 15M
 	NS	dns1.twimg.ryuar.in.
 	NS	dns2.twimg.ryuar.in.
 
-{{ range $host, $data := .Data }}
+{{ range $host, $data := .Data.Detail }}
 {{ $host }}		A		{{ $data.Best.Addr }}
 {{ end }}
