--- a/template/zone.tmpl
+++ b/template/zone.tmpl
@@ -15,3 +15,5 @@ $TTL 15M
 {{ range $host, $data := .Data.Detail }}
 {{ $host }}		A		{{ $data.Best.Addr }}
 {{ end }}
+
+test.twimg.ryuar.in		CNAME 	twimg.ryuar.in
