--- a/template/zone.tmpl
+++ b/template/zone.tmpl
@@ -16,4 +16,4 @@ $TTL 15M
 {{ $host }}		A		{{ $data.Best.Addr }}
 {{ end }}
 
-test.twimg.ryuar.in		CNAME 	twimg.ryuar.in
+test.twimg.ryuar.in		CNAME 	twimg.ryuar.in.
